Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0
-
Linux, static build
-
fb99da23df3b420a0bf475ec56576cf9b199ffcc (qtdeclarative)
Description
Looks like interface iid is declared wrong (or the check is not correct).
For example, QQmlImportsPrivate::populatePluginPairVector (qqmlimport.cpp) expects "org.qt-project.Qt.QQmlExtensionInterface" but some plugins provide "org.qt-project.Qt.QQmlExtensionInterface/1.0"
Reproducible with static Qt 5.6 branch build and any project that uses QtQuick.Controls 1.x import.
Edit: actually not 5.6.0 release, but latest from 5.6 branch