Add version tag to QQmlExtensionInterface_iid

Commit 392c7b99348e2a96ef11adb5712095fbd13fb780 introduced version
checking that checks QML extension plugin interface version name.
Unfortunately many plugins inside and outside qtdeclarative already
defined the string with interface version, leading to plugin not
being loaded.

Task-number: QTBUG-53090
Change-Id: I792df4ba06753bc21eab4adcd6f2068543d02368
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>